syntax = "proto3";

package PBase;


// ***********************************  MSG Start ***********************************

//错误码 2000
message S2C_ErrorCode
{
    int32 errcode = 1;
}

//MSG_CL2GT_SOCKETHIT         1999     //客户端心跳包
message C2S_SocketHit
{

}

//MSG_GT2CL_SOCKETHIT         2999     //客户端心跳包
message S2C_SocketHit
{
    int32 curtime = 1; //时间戳
}


// ***********************************  MSG End ***********************************




// ***********************************  Stuct Start ***********************************


//货币
message PB_Money
{
    int32 type = 1;//货币的类型
    int32 num = 2; //货币数量
}


//邮件
message PB_MailItem
{
    string mid = 1;
    string title = 2;   //标题
    string content = 3; //内容描述
    string itemlist = 4; //物品列表
    int32 sendTime = 5; //发送时间
    int32 readTime = 6; //读时间
    int32 pastTime = 7; //过期时间
    int32 state = 8; //已读状态 1 已读未领取 2 已读已领取
}

//卡牌
message PB_TeamCardInfo
{
    int32 id = 1; 
    int32 num = 2;   //总数量
    int32 level = 3; //强化等级
}









//-------------------------------------------------- 以下不用



//物品
message PB_Item
{
    string itemGuid = 1; //唯一id
    int32 itemId = 2;  //配置id
    int32 itemPos = 3;  //位置
    int32 itemNum = 4;  //数量
}

message PB_ItemList
{
    repeated PB_Item itemList = 1;
}

//任务计数器
message PB_TaskCounter
{
    int32 cId = 1;  //
    int32 cArg = 2;  
    int32 cNum = 3;  //
}

//任务
message PB_Task
{
    int32 taskId = 1;  //配置id
    int32 taskState = 2;  //状态
    int32 acceptTime = 3;  //接受时间
    int32 submitTime = 4;  //完成时间
    repeated PB_TaskCounter counters = 5;
}

message PB_TaskList
{
    repeated PB_Task taskList = 1;
}

//普通计数器
message PB_Counter
{
    int32 counterId = 1; //
    int32 counterNum = 2;  //
    repeated int32 counterArgs = 3;  //
}

message PB_CounterList
{
    repeated PB_Counter counterList = 1;
}

//工会数据
message PB_UnionObj
{
    int32 unionId = 1;  //宗门配置id
    string unionName = 2;  //工会名
    int32 unionType = 3;  //工会类型
    repeated int32 npcList = 4;  //npc列表
    repeated int32 skillList = 5;  //技能列表
    int32 unionLevel = 6;  //工会等级
    int64 unionEXP = 7;  //工会经验
    int64 unionMoney = 8; //工会资金
    int32 maxMember= 9; //工会人数上限
    int32 maxVChair = 10;  //副会长数量上限
    int32 maxElder = 11;  //长老数量上限
    string unionNotice = 12;  //工会公告
    int32 unionCreateTime = 13;  //工会创建时间
    string creatorName = 14;  //帮主的名称
}

//工会成员数据
message PB_UnionMember
{
    int32 dbid = 1;  //  db数据id       
    int32 unionDbid = 2;  //  公会唯一id
    int32 plyerDBid = 3;  //  玩家唯一id
    string memberName = 4;  //  玩家名字
    int32 rank = 5;  // 职位
    int32 offer = 6;  // 贡献  
    int32 joinTime = 7;  //  加入时间
    int32 exitTime = 8;  //  退出时间
    int32 online = 9;  //  在线
}

//工会申请列表数据
message PB_UnionApplyInfo
{
    int32 playerDbid = 1;  //
    int32 applyTime = 2;  //
}

//工会日志数据
message PB_UnionLogInfo
{
    int32 time = 1;  //时间
    string text = 2;  //文本(例如:xxx加入工会)
}



// ***********************************  Stuct End ***********************************



